[package]
name = "passivetcp-rs"
version = "0.1.0-alpha.3"
edition = "2021"
description = "Passive traffic fingerprinting [p0f]"
license = "MIT"
authors = ["Maximiliano Biandratti <biandratti@example.com>"]
repository = "https://github.com/biandratti/passivetcp-rs"
readme = "README.md"
keywords = ["p0f", "fingerprinting", "network", "security", "TCP"]
categories = ["network-programming"]

[dependencies]
nom = "8.0"
pnet = "0.35.0"
failure = "0.1.8"
log = "0.4.25"
ttl_cache = "0.5.1"
lazy_static = "1.5.0"
httparse = "1.10.0"
crossbeam = "0.8.4"

[dev-dependencies]
clap = { version = "4.5.29", features = ["derive"] }
log4rs = "1.3.0"

[[example]]
name = "p0f"
path = "examples/p0f.rs"
