[package]
name = "passivetcp-rs"
version = "1.0.1"
edition = "2021"
description = "Passive traffic fingerprinting [p0f]"
license = "MIT"
authors = ["Maximiliano Biandratti <biandratti@example.com>"]
repository = "https://github.com/biandratti/passivetcp-rs"
readme = "README.md"
keywords = ["p0f", "fingerprinting", "network", "security", "TCP"]
categories = ["network-programming"]

[dependencies]
nom = "8.0.0"
pnet = "0.35.0"
thiserror = "2.0.12"
tracing = "0.1.41"
ttl_cache = "0.5.1"
lazy_static = "1.5.0"
httparse = "1.10.1"
crossbeam = "0.8.4"

[dev-dependencies]
clap = { version = "4.5.38", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
criterion = { version = "0.6.0", features = ["html_reports"] }
pcap-file = "3.0.0-rc1"

[[example]]
name = "p0f"
path = "examples/p0f.rs"

[[bench]]
name = "benchmark"
harness = false
